--- a/learn-reactivespring/build.gradle
+++ b/learn-reactivespring/build.gradle
@@ -18,6 +18,10 @@ repositories {
 	mavenCentral()
 }
 
+test {
+	exclude 'com/learnreactivespring/fluxandmonoplayground/**'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
